- moves cropxp to new package location - updates readme - improves config error handling