@@ -1,3 +1,5 @@
+package com.github.euronite.cropxp;
+
 import org.bukkit.Material;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
@@ -8,28 +10,35 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
 import org.bukkit.event.block.BlockBreakEvent;
+import org.bukkit.plugin.Plugin;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 
-public class BlockChangeEvent implements Listener {
-    FileConfiguration config;
-    ArrayList<Material> materials = new ArrayList<>();
+public class BlockChangeListener implements Listener {
+    private static final ArrayList<Material> materials = new ArrayList<>();
 
-    List<BlockFace> blockFaces = Arrays.asList(BlockFace.NORTH, BlockFace.EAST, BlockFace.WEST, BlockFace.SOUTH);
+    List<Material> cropOptions = List.of(Material.POTATOES, Material.CARROTS, Material.COCOA, Material.BEETROOTS, Material.WHEAT, Material.MELON, Material.PUMPKIN, Material.NETHER_WART);
+
+    private static final List<BlockFace> blockFaces = List.of(BlockFace.NORTH, BlockFace.EAST, BlockFace.WEST, BlockFace.SOUTH);
     int xpAmount;
 
-    public BlockChangeEvent(FileConfiguration config) {
-        this.config = config;
+    public BlockChangeListener(FileConfiguration config, Plugin plugin) {
         xpAmount = config.getInt("xpAmount");
         if (xpAmount < 1) {
-            throw new IllegalArgumentException("XP value should be greater than 0. Please fix before using.");
+            xpAmount = 0;
+            plugin.getLogger().severe("Invalid XP amount, default set to 0");
         }
+
         for (String material : config.getStringList("xpCrops")) {
-            if (material != null) {
+            if (Material.getMaterial(material) == null) {
+                plugin.getLogger().severe("Invalid material type, skipping!");
+            }
+            if (cropOptions.contains(Material.getMaterial(material))) {
                 materials.add(Material.getMaterial(material));
+            } else {
+                plugin.getLogger().warning("Unsupported crop type, skipping!");
             }
         }
     }
